# ChangeLog for net-zope/zcbuildout
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zc-buildout/ChangeLog,v 1.1 2009/10/10 17:03:50 arfrever Exp $

  29 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zcbuildout-1.2.1.ebuild, -zcbuildout-1.4.1.ebuild, +zc-buildout-1.4.1.ebuild:
  net-zope/zcbuildout renamed to net-zope/zc-buildout.

*zcbuildout-1.4.1 (29 Aug 2009)

  29 Aug 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zcbuildout-1.1.1.ebuild, +zcbuildout-1.4.1.ebuild:
  Version bump. Set SUPPORT_PYTHON_ABIS. Add missing run-time dependency on
  dev-python/setuptools.

*zcbuildout-1.2.1 (04 Jun 2009)

  04 Jun 2009; Alfredo Tupone <tupone@gentoo.org> +zcbuildout-1.2.1.ebuild:
  Version bump to 1.2.1, added ~x86. Bug #272498 by Jeff Kowalczyk

*zcbuildout-1.1.1 (13 Mar 2009)

  13 Mar 2009; Alfredo Tupone <tupone@gentoo.org> +metadata.xml,
  +zcbuildout-1.1.1.ebuild:
  System for managing development buildouts.
