@@ -1,4 +1,6 @@
 DIST zc.buildout-1.4.1.tar.gz 245359 RMD160 46c29af95d12771f5c6c0b34da7f2c7b9733cf7c SHA1 4d4934498cc83497087fd241ff585184ecaad7d9 SHA256 427f7beb29e3f9ca20ebb9b61655b9ade6d1f7ce02994ea97e4c663c4aee739e
+DIST zc.buildout-1.4.2.tar.gz 248438 RMD160 0e111410aa4229356a125781a505f6ca0b48ebd6 SHA1 d9e56f2ac7a575b6416d13f94b672033d0c84c01 SHA256 5db99f18d24d7e124b04c142316590419ce20de4d16b205227bc416e59fd9cb6
 EBUILD zc-buildout-1.4.1.ebuild 855 RMD160 d31b016a9db2370cfc8db29cfc31b0d981c76a67 SHA1 9c28f93d1e8d16541883c0f580e4e2d6cd55655c SHA256 f537a85d398a65ad70eb61fac1887f813b264b9bd9a9da228249993cb9602492
-MISC ChangeLog 1035 RMD160 0484f6b4c68e8719569b7d546eab98178fd25f18 SHA1 57aad266180db7321d11fb9cefa9545c87bfa7b7 SHA256 baf46c4ff6f04636850a37a76fb669dcda77b2155e3a60a33bf784587ce602d0
+EBUILD zc-buildout-1.4.2.ebuild 855 RMD160 11ac6a781282d22e4ae064333150836fad8268dd SHA1 77e11f8af1b60ad1d41f2ccaeaeead085d82e034 SHA256 814da234f6bf3bfc064ee8455ccd5371c43605d646bba05fc10bff3ad19cb72b
+MISC ChangeLog 1189 RMD160 a97d924133ece2bcbf39f743b91f32d199ca01e4 SHA1 ec44fbe435dbd4bbfe9ef0d6a5b54d4676b6da5b SHA256 a163248c07ed306bd350c4aa0c0da89e10a8a69766c54be62da27d2535152b62
 MISC metadata.xml 1357 RMD160 9312fe701b0850a2d2ccc2f37f045c20ccb64d1f SHA1 90fde3ba7086e60b4a780d7cb389ba455910d54b SHA256 9786a57ae510421e25c25bef8e1ca88a4196f86b08a5013d603cd7662a4c2a8e
