@@ -1,0 +1,36 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /usr/local/ssd/gentoo-x86/output/net-zope/cvs-repo/gentoo-x86/net-zope/zc-buildout/Attic/zc-buildout-1.4.2.ebuild,v 1.1 2009/11/01 23:51:39 arfrever Exp $
+
+EAPI="2"
+SUPPORT_PYTHON_ABIS="1"
+
+inherit distutils
+
+MY_PN="${PN/-/.}"
+MY_P=${MY_PN}-${PV}
+
+DESCRIPTION="System for managing development buildouts"
+HOMEPAGE="http://pypi.python.org/pypi/zc.buildout"
+SRC_URI="http://pypi.python.org/packages/source/${MY_PN:0:1}/${MY_PN}/${MY_P}.tar.gz"
+
+LICENSE="ZPL"
+SLOT="0"
+KEYWORDS="~amd64 ~x86"
+IUSE=""
+
+RDEPEND="dev-python/setuptools"
+DEPEND="${RDEPEND}"
+RESTRICT_PYTHON_ABIS="3.*"
+
+S="${WORKDIR}"/${MY_P}
+
+PYTHON_MODNAME="${PN/-//}"
+DOCS="CHANGES.txt todo.txt"
+
+src_install() {
+	distutils_src_install
+
+	# Remove README.txt installed in incorrect location.
+	rm -f "${D}usr/README.txt"
+}
